adding support for loss + metrics returning dictionary

--- a/mnist classification.ipynb
+++ b/mnist classification.ipynb
@@ -71,7 +71,41 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (2): ReLU(inplace=True)\n",
+       "  (3): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (4): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (5): ReLU(inplace=True)\n",
+       "  (6): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (7): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (8): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (9): ReLU(inplace=True)\n",
+       "  (10): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (11): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (12): ReLU(inplace=True)\n",
+       "  (13): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (14): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (15): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (16): ReLU(inplace=True)\n",
+       "  (17): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (18): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (19): ReLU(inplace=True)\n",
+       "  (20): GlobalAverage(axes=[2, 3], keepdims=False)\n",
+       "  (21): Linear(in_features=128, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = nn.Sequential(*[\n",
     "    nn.Conv2d(1, 16, kernel_size=3, padding=1),\n",
@@ -99,7 +133,9 @@
     "    \n",
     "    GlobalAverage(),\n",
     "    nn.Linear(128, 10)\n",
-    "])"
+    "])\n",
+    "\n",
+    "model.cuda(0)"
    ]
   },
   {
@@ -126,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = Trainer(model, opt, loss, metrics=[metrics.acc_fn()])"
+    "trainer = Trainer(model, opt, loss, metrics=[metrics.acc_fn()], x_device=\"cuda:0\", y_device=\"cuda:0\")"
    ]
   },
   {
@@ -136,7 +172,9 @@
    "outputs": [],
    "source": [
     "cbs = [\n",
-    "    callbacks.LrFinder(1e-5, 1e-1, epochs=1)\n",
+    "    callbacks.WarmRestart(1e-5),\n",
+    "    callbacks.TrainingScheduler(epochs=2),\n",
+    "    callbacks.CSVLogger(\"train.csv\")\n",
     "]"
    ]
   },
@@ -155,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9396a20d6f944fcc93669424b874d833",
+       "model_id": "49047aa2d64542dc9d4e7d0d99078944",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,7 +214,50 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "384dcaad39154e15b772ba002010fdbd",
+       "model_id": "46162ce806524fe8ad77d0550bf99fc5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='evaluate', max=79.0, style=ProgressStyle(description_widt…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "epoch 2\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba6d6e5bcf4c4181b89112dd835618bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='train', max=468.0, style=ProgressStyle(description_width=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dea90bafda4e45199524f06e072fc6ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,22 +274,6 @@
      "text": [
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<iframe\n",
-       "    scrolling=\"no\"\n",
-       "    width=\"100%\"\n",
-       "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_11.html\"\n",
-       "    frameborder=\"0\"\n",
-       "    allowfullscreen\n",
-       "></iframe>\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
