add super convergence + unify dice and fb + log accumulation

--- a/mnist classification.ipynb
+++ b/mnist classification.ipynb
@@ -172,9 +172,11 @@
    "outputs": [],
    "source": [
     "cbs = [\n",
-    "    callbacks.WarmRestart(1e-5),\n",
-    "    callbacks.TrainingScheduler(epochs=2),\n",
-    "    callbacks.CSVLogger(\"train.csv\")\n",
+    "    #callbacks.LrFinder(1e-5, 5e-2, epochs=1),\n",
+    "    callbacks.SuperConvergence(0.025, 2)\n",
+    "    #callbacks.WarmRestart(1e-5),\n",
+    "    #callbacks.TrainingScheduler(epochs=2),\n",
+    "    #callbacks.CSVLogger(\"train.csv\")\n",
     "]"
    ]
   },
@@ -193,7 +195,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49047aa2d64542dc9d4e7d0d99078944",
+       "model_id": "6c800fcde58e484b86c3e2cd0ac0d3f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +216,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46162ce806524fe8ad77d0550bf99fc5",
+       "model_id": "6cf63c8c014748fcaa07a597983abaf9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +238,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba6d6e5bcf4c4181b89112dd835618bc",
+       "model_id": "90c8d162be004beeafcca2dd4210b537",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +259,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dea90bafda4e45199524f06e072fc6ba",
+       "model_id": "7a7450b2a1cf4d27b4b52dc199e4bebb",
        "version_major": 2,
        "version_minor": 0
       },
