--- a/mnist classification.ipynb
+++ b/mnist classification.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +172,7 @@
    "outputs": [],
    "source": [
     "cbs = [\n",
-    "    #callbacks.LrFinder(1e-5, 5e-2, epochs=1),\n",
-    "    #callbacks.SuperConvergence(0.025, 2)\n",
-    "    callbacks.WarmRestart(1e-5),\n",
-    "    #callbacks.TrainingScheduler(epochs=2),\n",
-    "    callbacks.CSVLogger(\"train.csv\")\n",
+    "    callbacks.\n",
     "]"
    ]
   },
