add gpu multiprocessing

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,16 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
+    "import multiprocessing as mp\n",
+    "import test\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start process\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process Process-2:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/Cellar/python@3.9/3.9.9/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/process.py\", line 315, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/Cellar/python@3.9/3.9.9/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/vinbrain/Desktop/research-idea/test.py\", line 4, in check\n",
+      "    if d[0]:\n",
+      "TypeError: 'int' object is not subscriptable\n"
+     ]
+    }
+   ],
+   "source": [
+    "with mp.Manager() as manager:\n",
+    "    tmp_d = manager.dict()\n",
+    "    tmp_d[0] = False\n",
     "\n",
-    "from plasma.training import utils\n",
-    "from test import check\n",
+    "    p = mp.Process(target=test.check, args=(tmp_d))\n",
+    "    p.start()\n",
     "\n",
-    "#utils.notebook = True"
+    "    time.sleep(2)\n",
+    "    tmp_d[0] = True\n",
+    "    p.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<DictProxy object, typeid 'dict' at 0x1101e1580>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Process name='Process-2' pid=73520 parent=73316 stopped exitcode=1>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
    ]
   },
   {
@@ -19,18 +97,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a = range(5_000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.parallel_iterate(a, check)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -49,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.9 (main, Nov 21 2021, 03:16:13) \n[Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "vscode": {
    "interpreter": {
