--- a/test.ipynb
+++ b/test.ipynb
@@ -20,31 +20,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start process\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Process Process-2:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/homebrew/Cellar/python@3.9/3.9.9/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/process.py\", line 315, in _bootstrap\n",
-      "    self.run()\n",
-      "  File \"/opt/homebrew/Cellar/python@3.9/3.9.9/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/process.py\", line 108, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Users/vinbrain/Desktop/research-idea/test.py\", line 4, in check\n",
-      "    if d[0]:\n",
-      "TypeError: 'int' object is not subscriptable\n"
+      "start process\n",
+      "haha\n"
      ]
     }
    ],
    "source": [
     "with mp.Manager() as manager:\n",
-    "    tmp_d = manager.dict()\n",
-    "    tmp_d[0] = False\n",
+    "    tmp_d = manager.list([False])\n",
     "\n",
-    "    p = mp.Process(target=test.check, args=(tmp_d))\n",
+    "    p = mp.Process(target=test.check, args=(tmp_d,))\n",
     "    p.start()\n",
     "\n",
     "    time.sleep(2)\n",
@@ -116,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9 (main, Nov 21 2021, 03:16:13) \n[Clang 13.0.0 (clang-1300.0.29.3)]"
+   "version": "3.9.9"
   },
   "vscode": {
    "interpreter": {
